# aesthetic-mcp

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
src/aesthetic_scorer_mcp/: __init__.py  __main__.py  model.py  server.py
